Fix flags overflow
1. fix overflow
2. adding space between date

--- a/_sass/_collections.scss
+++ b/_sass/_collections.scss
@@ -2,6 +2,7 @@
     h3 {
         margin-top: 30px;
         margin-bottom: 0;
+        width: 90%;
     }
 }
 
@@ -14,9 +15,12 @@
 
     div {
         display: inline-block;
-        width: 400px;
         margin: auto;
         text-align:justify;
+    }
+
+    > div {
+        width: 400px;
     }
 
     .flag {
@@ -84,8 +88,8 @@
 
 @media screen and (max-width: 730px) {
     .collection-item {
-        div {
-            width: 80%;
+        > div {
+            width: 90%;
         }
 
         img {
@@ -97,7 +101,7 @@
         }
 
         .link {
-            display: block;
+            display: inline-block;
         }
 
         .desc {
