--- a/_sass/_vertical_timeline.scss
+++ b/_sass/_vertical_timeline.scss
@@ -48,8 +48,10 @@ $timeline-left: 20%;
     position: relative;
     left: $timeline-left;
     margin-left: 30px;
+    width: 70%;
 
     .flag {
+        display: inline-block;
         -webkit-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
         -moz-box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
         box-shadow: 1px 1px 1px rgba(0,0,0,0.15), 0 0 1px rgba(0,0,0,0.15);
@@ -71,6 +73,7 @@ $timeline-left: 20%;
         border-right-color: rgb(248,248,248);
         border-width: 8px;
         pointer-events: none;
+        text-align: justify;
     }
 }
 
@@ -106,6 +109,7 @@ $timeline-left: 20%;
     display: inline-block;
     
     text-align: center;
+    max-width: 200px;
 }
   
 .flag {
@@ -187,7 +191,7 @@ $timeline-left: 20%;
         span {
             display: inline-block;
             padding-bottom: 10px;
-            width: 80%;
+            // width: 80%;
         }
     }
 }
@@ -224,7 +228,12 @@ $timeline-left: 20%;
     
         .time-wrapper {
             left: -80px;
-            width: 80%;
+            width: 50px;
+            text-align: center;
+        }
+
+        .flag-wrapper{
+            max-width: 300px;
         }
     }
 }
