--- a/css/main.scss
+++ b/css/main.scss
@@ -140,3 +140,16 @@ h1{
         width: 250px;
     }
 }
+
+.trigger{
+    background-color: rgba($color: #000000, $alpha: 0.5);
+}
+
+@media screen and (max-width: 660px) {
+    .intro-block {
+        justify-content: center;
+        div {
+            width: 80%;
+        }
+    }
+}
